# ZECAP

./: .dev.env  .gitignore  README.md  development.sh  development.yml  package-lock.json
backend/: .gitignore  Dockerfile.dev  pyproject.toml  requirements.txt  script_as_frontend.sh  setup.sh  urls.py
backend/countdown/: leetcode.py  models.py  tests.py  urls.py  views.py
backend/countdown/migrations/: 0001_initial.py  0002_user_alter_countdown_target_time.py  0003_session.py  0004_session_busy_question.py  0005_sessionuserquestions_question_session_user_questions_and_more.py  0006_session_round_sessionuserquestions_new_question_and_more.py  0007_remove_session_busy_session_target_time.py
backend/project/: settings.py  urls.py
data/nginx/: nginx.dev.conf
frontend/: Dockerfile.dev  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.scss  main.ts
frontend/src/assets/lang/: en.json  nl.json
frontend/src/components/: CountdownTimer.vue  LanguageSelector.vue  Loading.vue  MovieCard.vue  MovieCarousel.vue
frontend/src/composables/services/: helpers.ts  movie.service.ts
frontend/src/config/: axios.ts  endpoints.ts  i18n.ts
frontend/src/router/: router.ts
frontend/src/types/: Movie.ts
frontend/src/views/: App.vue  HomeView.vue  MovieView.vue
frontend/static/js/: countdown.js
