[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Bram Meir <Bram.Meir@ugent.be>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.7"
djangorestframework = "^3.15.2"
django-stubs-ext = "^5.1.3"
django-sslserver = "^0.22"
gunicorn = "^23.0.0"
django-redis = "^5.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
